# cwte2025-service-bbspriest

./: .gitignore  LICENSE  README.md
.github/workflows/: enochecker_test.yml
checker/: Dockerfile  docker-compose.yml
checker/src/: Makefile  biasednonce.py  checker.py  connectionInterface.py  crypto.py  ecdsa_lib.py  gaa.cpp  gaa.py  gunicorn.conf.py  pyproject.toml
meta/: .editorconfig  CMakeLists.txt  Dockerfile  buildmodule.sh  cryptoAccelerator.cpp  docker-compose.yml  findGMP.cmake
service/: Dockerfile  docker-compose.yml  entrypoint.sh
service/src/: confessions.py  crypto.py  main.py
